@@ -2,10 +2,10 @@
 all: sortdatabase
 
 sortdatabase.lo: sortdatabase.cc
-	libtool --mode=compile g++ `xapian-config --cxxflags` $(CFLAGS) $? -c -o $@
+	libtool --mode=compile g++ `xapian-config-1.1 --cxxflags` $(CFLAGS) $? -c -o $@
 
 sortdatabase: sortdatabase.lo
-	libtool --mode=link g++ `xapian-config --ltlibs` $? -o $@
+	libtool --mode=link g++ `xapian-config-1.1 --ltlibs` $? -o $@
 
 .PHONY:clean
 
