@@ -1,3 +1,9 @@
+Tue May 26 07:54:48 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: Don't recalculate all the potentials
+	  each time - just update the one which has changed.  About 50%
+	  faster in my tests.
+
 Mon May 25 00:39:18 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/indexerconnection.py,xappy/searchconnection.py: Display
